# All-Repo-Practice

$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/: $I1S0SWI  $I1VH5JK.sh  $I31ZAST  $I40OL0W  $I478GI4.prod  $I4GI35T.env  $I5BDYC0.ts  $I6BFTHU  $I6XHOSY  $I7WWTTG  $IAPOU0N.tsx  $IBJL8CV  $ICOL34O.toml  $IDK1J4Q  $IE1HJBZ.yml  $IEJBUKF  $IGFG1B7  $IJ8BYBP  $ILFAW6F.git  $IO6YEYF.md  $IP4PILB  $ISANBLG  $IV4VE2V  $IW78V8X  $IXNB8JO.ts  $IXWQG4T.sh  $IZ1WM0A.css  $R1S0SWI  $R1VH5JK.sh  $R4GI35T.env  $RDK1J4Q
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R31ZAST/: compose.yml  pyproject.toml
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R40OL0W/: page.tsx
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R6BFTHU/hello-world/: Dockerfile
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R6XHOSY/: Button.tsx  navbar.tsx
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R7WWTTG/fastapi-01/: pyproject.toml
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R7WWTTG/fastapi-01/fastapi_01/: main.py
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$R7WWTTG/fastapi-01/tests/: test_main.py
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$RP4PILB/hello-world/: main.cpp
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$RSANBLG/: product-row.tsx  search-bar.tsx
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$RV4VE2V/microservice_02/: settings.py
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$RV4VE2V/todo/: main.py
$RECYCLE.BIN/S-1-5-21-537196584-4045555357-2291973897-1001/$RW78V8X/: page.tsx
DevOps/01_gpt_with_docker/: compose.yaml
DevOps/01_gpt_with_docker/gpt_service/: Dockerfile  pyproject.toml
DevOps/hello-world/: Dockerfile.dev  pyproject.toml
DevOps/hello-world/hello_world/: main.py
DevOps/kafka-with-ui-compose/: compose.yaml
DevOps/kafka_messaging-pub-sub/: compose.yaml
DevOps/kafka_messaging-pub-sub/microservice_02/: README.md
DevOps/kafka_messaging-pub-sub/todo/: Dockerfile.dev  pyproject.toml
DevOps/kafka_messaging-pub-sub/todo/app/: main.py  todo.proto
DevOps/microservice/: compose.yml
DevOps/microservice/oauth2/: Dockerfile  pyproject.toml
DevOps/microservice/oauth2/oauth2/: main.py
Power BI/: First Tutorial.pbix
Python/: main.py  practice.ipynb
Python/Poetry/init/: pyproject.toml
Python/Poetry/init/init/: main.py
Python/Poetry/init/tests/: my_init_test.py
Selneium-bot/01_hello-bot/: pyproject.toml
Selneium-bot/01_hello-bot/01_hello_bot/: capture.py  main.py
